完成spring+springmvc+mybatis配置

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,52 @@
-/.idea
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+*~
 *.iml
+*.ipr
+*.iws
+*.ids
+.DS_Store
+pom.xml.releaseBackup
+release.properties
+.idea/
+target/
+.classpath
+.project
+.settings/
+lib/
+logs/
+target/
+bin/
+.DS_Store
+.metadata
+*.log
+*.log.*
+.idea/
+*.iml
+.vagrant/
+.#*
+config_center_client.log
+.svn
+rebel.xml
+dev-local.properties
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/build/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
