完成spring+springmvc+mybatis配置

--- a/dome01-dao/pom.xml
+++ b/dome01-dao/pom.xml
@@ -53,6 +53,20 @@
             <artifactId>druid</artifactId>
         </dependency>
 
+        <!-- 日志 -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.logback-extensions</groupId>
+            <artifactId>logback-ext-spring</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
