--- a/dome01-web/src/main/resources/profiles/development.properties
+++ b/dome01-web/src/main/resources/profiles/development.properties
@@ -3,3 +3,16 @@ jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/test?characterEncoding=UTF-8
 jdbc.username=root
 jdbc.password=root
+
+#redis
+redis.maxTotal=10
+redis.maxIdle=10
+redis.minIdle=0
+redis.testOnBorrow=true
+redis.testOnReturn=true
+
+redis.host=127.0.0.1
+redis.port=8800
+redis.timeout=10000
+redis.password=
+
